<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  * Created by ade supyan abdul aziz.
  ~  * Copyright (c) 2019. All rights reserved.
  ~  * Last modified 25/08/19 21:54 PM.
  -->

<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/action_notification">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_daily"
            android:title="@string/label_daily_reminder" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_release"
            android:title="@string/label_release_reminder" />

    </PreferenceCategory>

</PreferenceScreen>