<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  * Created by ade supyan abdul aziz.
  ~  * Copyright (c) 2019. All rights reserved.
  ~  * Last modified 25/08/19 21:54 PM.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/change_language"
        android:title="@string/change_language"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never">
        <menu>

            <item android:id="@+id/action_english"
                android:title="@string/english"
                app:showAsAction="never"/>

            <item android:id="@+id/action_indonesia"
                android:title="@string/indonesian"
                app:showAsAction="never"/>

        </menu>
    </item>
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_favorit"
        android:title="@string/favorite"
        android:icon="@android:drawable/btn_star_big_on"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/btn_star_big_on"
        app:showAsAction="never">
    </item>
</menu>