<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  * Created by ade supyan abdul aziz.
  ~  * Copyright (c) 2019. All rights reserved.
  ~  * Last modified 25/08/19 21:54 PM.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:elevation="2dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#a40404"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_rating_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/rating"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/rating"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rating_title" />

    <TextView
        android:id="@+id/text_language_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/language"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_rating_title"
        app:layout_constraintTop_toBottomOf="@+id/text_rating" />

    <TextView
        android:id="@+id/text_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/language"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_language_title" />

    <TextView
        android:id="@+id/text_release_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/release"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_language_title"
        app:layout_constraintTop_toBottomOf="@+id/text_language" />

    <TextView
        android:id="@+id/text_release"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/release"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_release_title" />

    <TextView
        android:id="@+id/text_popularity_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/popularity"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_release_title"
        app:layout_constraintTop_toBottomOf="@+id/text_release" />

    <TextView
        android:id="@+id/text_popularity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/popularity"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_popularity_title" />

 </android.support.constraint.ConstraintLayout>