<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  * Created by ade supyan abdul aziz.
  ~  * Copyright (c) 2019. All rights reserved.
  ~  * Last modified 25/08/19 21:54 PM.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="500dp">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/name_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_movie_photo"
            android:layout_width="166dp"
            android:layout_height="250dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/name_movie"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_backdrop" />

        <include
            android:id="@+id/include_specifications"
            layout="@layout/layout_fact"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_movie_photo"
            app:layout_constraintTop_toBottomOf="@+id/iv_backdrop" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="463dp" />

        <TextView
            android:id="@+id/text_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:text="@string/overview"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelines" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape"
            android:minHeight="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_overview">

            <TextView
                android:id="@+id/text_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1"
                android:text="@string/overview"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_overview"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.v7.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_favorite"
            android:tint="@color/colorAccent"
            android:contentDescription="@string/like"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/text_overview"
            app:layout_constraintTop_toTopOf="@+id/text_overview"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>